syntax = "proto3";
package serving;

message Model {
    string uid                      = 1;
    string name                     = 2;
    string owner                    = 3;
    int32 created_at                = 4;
    int32 updated_at                = 5;
    ModelVersion primary_version    = 6;
}

enum ModelType {
    PMML = 0;
    TENSORFLOW = 1;
}

message ModelVersion {
    string uid                          = 1;
    string name                         = 2;
    repeated string request_features    = 3;
    repeated string stored_features     = 4;
    int32 created_at                    = 5;
    int32 updated_at                    = 6;
}

message ValueInterface {
    oneof value {
        bool value_boolean      = 1;
        int32 value_int32       = 2;
        int64 value_int64       = 3;
        float value_float32     = 4;
        double value_float64    = 5;
        string value_string     = 6;
        bytes value_bytes       = 7;
    }
}

message EmptyResponse {}
